# rust-backend

./: .env.example  Cargo.toml  diesel.toml  docker-compose.yml
.cargo/: config.toml
conf/: app.conf
migrations/2024-11-03-014109_create_user/: up.sql
src/: api_error.rs  db.rs  main.rs  schema.rs
src/auth/: api.rs  casdoor.rs  mod.rs  route.rs
src/auth/keycloak/: config.rs  mod.rs  user.rs
src/scope_one/: mod.rs
src/user/: mod.rs  model.rs  route.rs  schema.rs
