[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
utoipa = {version = "5", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "8", features = ["actix-web"] }
utoipa-redoc = { version = "5", features = ["actix-web"] }
utoipa-rapidoc = { version = "5", features = ["actix-web"] }
utoipa-scalar = { version = "0.2", features = ["actix-web"] }
utoipa-actix-web = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
reqwest = {version = "0.12", features = ["json"]}
log = "0.4.22"
env_logger = "0.11.5"
dotenvy = "0.15"
lazy_static = "1.5"
casdoor-rust-sdk = "1.3.0"
# -- DB
diesel = { version = "2.2.0", features = ["sqlite", "r2d2"] }
r2d2 = "0.8"
